--- a/STM Project/Traffic_Light_Assignment.ioc
+++ b/STM Project/Traffic_Light_Assignment.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -165,7 +168,7 @@ RCC.USBFreq_Value=64000000
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=999
+TIM2.Period=9999
 TIM2.Prescaler=63
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
